--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -333,7 +333,7 @@ table tr:hover {
 /* Navigation */
 .navigation {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   width: 100%;
   max-width: 1200px;
   margin-bottom: 30px;
