--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -60,17 +60,17 @@ body {
   padding: 30px;
 }
 
-/* .form-container {
+.form-container {
   background-color: white;
   padding: 30px;
   border-radius: 15px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   width: 400px;
   max-width: 90%;
-} */
+} 
 
 /* Form Elements */
-/* .form-group {
+ .form-group {
   margin-bottom: 20px;
 }
 
@@ -80,7 +80,7 @@ body {
   font-weight: 600;
   color: #444;
   font-size: 15px;
-} */
+} 
 
 .form-control {
   width: 100%;
@@ -118,6 +118,18 @@ body {
 }
 
 /* Radio & Checkbox */
+.options {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 8px 0;
+}
+.options a {
+  text-decoration: none;
+  color: #0275d8;
+  font-weight: 600;
+  transition: color 0.2s;
+}
 .radio-group {
   display: flex;
   gap: 20px;
@@ -137,6 +149,11 @@ body {
   cursor: pointer;
 }
 
+.g-recaptcha{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
 /* Buttons */
 .btn {
   width: 100%;
@@ -153,6 +170,8 @@ body {
   justify-content: center;
   align-items: center;
   gap: 8px;
+  margin-bottom: 5px;
+  text-decoration: none;
 }
 
 .btn:hover {
@@ -197,6 +216,7 @@ body {
   gap: 12px;
   margin-top: 30px;
 }
+
 
 /* Links */
 .link-text {
